[gd_scene load_steps=10 format=3 uid="uid://dj3dq8e3m2y17"]

[ext_resource type="Texture2D" uid="uid://bpol36sra5fsl" path="res://assets/main_ship/projectiles/Main ship weapon - Projectile - Auto cannon bullet.png" id="1_7q1o6"]
[ext_resource type="Script" path="res://scripts/auto_cannon_projectile.gd" id="2_50d1i"]
[ext_resource type="Script" path="res://scripts/damage.gd" id="2_ay5f6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_31y2n"]
atlas = ExtResource("1_7q1o6")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2y1t"]
atlas = ExtResource("1_7q1o6")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v15wv"]
atlas = ExtResource("1_7q1o6")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kqup1"]
atlas = ExtResource("1_7q1o6")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_kycn8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_31y2n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2y1t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v15wv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqup1")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_k0abo"]
radius = 3.0
height = 10.0

[node name="AutoCannonProjectile" type="AnimatedSprite2D"]
sprite_frames = SubResource("SpriteFrames_kycn8")
frame_progress = 0.0302458
script = ExtResource("2_50d1i")

[node name="Hitbox" type="RigidBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CapsuleShape2D_k0abo")

[node name="Damage" type="Node" parent="."]
script = ExtResource("2_ay5f6")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
